feat: Endpoints de auth

--- a/Autenticacao.API/appsettings.Development.json
+++ b/Autenticacao.API/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=api-autenticacao;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
+    "TokenValidityInMinutes": 1,
+    "RefreshTokenValidityInDays": 7
   }
 }
